# C--SIM

./: README.md
pysim/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pysim/examples/: machine_shop.py  producer_consumer.py  stats_demo.py
pysim/src/pysim/: __init__.py  entity.py  process.py  random.py  simset.py
pysim/src/pysim/stats/: __init__.py  histogram.py  mean.py  pareto.py  quantile.py  simple_histogram.py  time_variance.py  variance.py
pysim/tests/: conftest.py  test_random.py
pysim/tests/validation/: test_basic.py  test_entity.py  test_interrupts.py  test_process.py  test_producer_consumer.py  test_restart.py  test_simset.py  test_stat.py  test_stats_example.py  test_streams.py  test_terminate.py
